--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   "dependencies": {
     "react": "17.x",
     "react-dom": "17.x",
-    "umi": "^3.5.20"
+    "mockjs": "^1.1.0",
+    "umi": "^3.2.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
-    "@umijs/test": "^3.5.20",
+    "@umijs/test": "^3.2.5",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
