--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     ]
   },
   "dependencies": {
+    "mockjs": "^1.1.0",
+    "postcss-px-to-viewport": "^1.1.1",
+    "rc-form": "^2.4.12",
     "react": "17.x",
     "react-dom": "17.x",
-    "mockjs": "^1.1.0",
     "umi": "^3.2.5"
   },
   "devDependencies": {
