--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     ]
   },
   "dependencies": {
+    "@types/classnames": "^2.3.1",
+    "classnames": "^2.3.1",
     "mockjs": "^1.1.0",
     "postcss-px-to-viewport": "^1.1.1",
     "rc-form": "^2.4.12",
